--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <tr ng-repeat="quote in ctrl.quotes | orderBy:sortType:sortReverse">
           <td>{{quote.Symbol}}</td>
           <td ng-style="{color: quote.change}">
-            {{quote.Price | number:5}}
+            {{quote.Price | myRound}}
             <i ng-if="quote.change == 'green'" class="fa fa-arrow-up" aria-hidden="true"></i>
             <i ng-if="quote.change == 'red'" class="fa fa-arrow-down" aria-hidden="true"></i>
           </td>
@@ -38,8 +38,8 @@
     </tbody>
 </table>
 <div class="manage">
-  <button ng-click="ctrl.disConnect()">Disconnect</button>
   <button ng-click="ctrl.connect()">Connect</button>
+  <button ng-click="ctrl.disConnect()">Disconnect</button>
 </div>
 </div>
 
